<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/member"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/close_profile"
                    android:layout_width="22dp"
                    android:layout_height="30dp"
                    android:src="@drawable/close"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.982"
                    app:layout_constraintStart_toEndOf="@+id/imageView8"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:tint="@color/white" />

            </androidx.constraintlayout.widget.ConstraintLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_name_text"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_username_text"
                android:textColor="@color/white"
                android:layout_marginTop="3dp"

                android:textSize="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_email_text"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginTop="3dp"

                />



        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_board"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_board_text"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_workspace_topic_text"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="20dp"
        android:layout_marginStart="20dp"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_workspace"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/profile_workspace_tab_text"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_card"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_mycard_tab_text"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_offline"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_offline_tab_text"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_settings"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_setting_tab_text"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>






</LinearLayout>